--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "a SummaDB that runs in the browser.",
   "main": "index.js",
   "scripts": {
-    "before": "rm -rf ${GOPATH}/pkg/*_js && gopherjs build --tags=levelupjs && mkdir -p dist",
-    "prebuild": "npm run before",
-    "prebuild-prod": "npm run before",
-    "pretest": "npm run before",
-    "build": "mkdir -p dist && browserify -vd summuladb.js -r levelup > dist/summuladb.js",
-    "build-prod": "mkdir -p dist && browserify -v summuladb.js -r levelup | uglifyjs > dist/summuladb.min.js",
+    "clean": "rm -rf ${GOPATH}/pkg/*_js_*",
+    "gopher": "npm run clean && gopherjs build --tags=levelupjs",
+    "gopher-min": "npm run clean && gopherjs build -m --tags=levelupjs",
+    "prebuild": "mkdir -p dist && npm run gopher",
+    "prebuild-prod": "mkdir -p dist && npm run gopher-min",
+    "pretest": "npm run gopher",
+    "build": "browserify -s SummulaDB -vd summuladb.js > dist/summuladb.js",
+    "build-prod": "browserify -s SummulaDB summuladb.js | uglifyjs -c -m > dist/summuladb.min.js 2> /dev/null",
+    "build-browser-test": "npm run build-prod && browserify -vd -r memdown -r levelup -u summuladb.js test.js > browser-test/bundle.js",
+    "prepare": "npm run build && npm run build-browser-test",
     "test": "node --require source-map-support/register test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "delay": "^2.0.0",
     "levelup": "^1.3.5",
-    "lua.vm.js": "0.0.1",
     "memdown": "^1.2.4",
     "pouchdb": "^6.1.2"
   },
@@ -25,6 +29,7 @@
     "browserify": "^14.3.0",
     "browserify-incremental": "^3.1.1",
     "source-map-support": "^0.4.14",
-    "tape": "^4.6.3"
+    "tape": "^4.6.3",
+    "uglify-js": "^2.8.22"
   }
 }
